--- a/views/layouts/map.html
+++ b/views/layouts/map.html
@@ -70,7 +70,7 @@
             <td align="center">
                 <i class="ss ss-logo"  style="font-size: 30pt; color: #A12130;" aria-hidden="true"></i>
             </td>
-            <td data-toggle="collapse" data-target="#run-data" align="center">
+            <td id="bottom-center-bar" align="center">
 
                 <div id="summary">
                     <div style="line-height: 15px">
