--- a/views/AppController/account.html
+++ b/views/AppController/account.html
@@ -97,7 +97,7 @@
         <table class="list-item-table">
             <tr>
                 <td>
-                    <i class="fa fa-bell-o"></i>
+                    <i style="color: #555555" class="fa fa-bell-o"></i>
                 </td>
                 <td>
                     {{ t .CurrentLocale "send_alert" ""}}
