--- a/views/AlertsController/alert_routes.html
+++ b/views/AlertsController/alert_routes.html
@@ -110,6 +110,8 @@
             <tr>
                 <td style="width: 100%;" class="alert-route-title">
                 {{ .RouteName}}
+                    <br>
+                    <span style="font-size: 10pt; font-weight: bold; color: #a9a6a4;">BUS ASSIGNED - {{.Bus}}</span>
                 </td>
                 <td>
                     <i data-id="{{.RouteId}}" class='fa fa-chevron-right'></i>
