--- a/views/AlertsController/alerts_dashboard.html
+++ b/views/AlertsController/alerts_dashboard.html
@@ -98,23 +98,23 @@
         </table>
     </a>
 
-    <a href="/alert_buses" class="list-group-item alerts-target-li">
-        <table style="width: 100%;">
-            <tr>
-                <td style="width: 100%;">
-                    <div class="alerts-target">
-                    {{ t .CurrentLocale "by_bus" "" }}
-                    </div>
-                    <div class="alerts-target-description">
-                    {{ t .CurrentLocale "by_bus_description" "" }}
-                    </div>
-                </td>
-                <td style="vertical-align: middle;">
-                    <i class="fa fa-chevron-right"></i>
-                </td>
-            </tr>
-        </table>
-    </a>
+    {{/*<a href="/alert_buses" class="list-group-item alerts-target-li">*/}}
+        {{/*<table style="width: 100%;">*/}}
+            {{/*<tr>*/}}
+                {{/*<td style="width: 100%;">*/}}
+                    {{/*<div class="alerts-target">*/}}
+                    {{/*{{ t .CurrentLocale "by_bus" "" }}*/}}
+                    {{/*</div>*/}}
+                    {{/*<div class="alerts-target-description">*/}}
+                    {{/*{{ t .CurrentLocale "by_bus_description" "" }}*/}}
+                    {{/*</div>*/}}
+                {{/*</td>*/}}
+                {{/*<td style="vertical-align: middle;">*/}}
+                    {{/*<i class="fa fa-chevron-right"></i>*/}}
+                {{/*</td>*/}}
+            {{/*</tr>*/}}
+        {{/*</table>*/}}
+    {{/*</a>*/}}
 
 </ul>
 
