--- a/views/AppController/account.html
+++ b/views/AppController/account.html
@@ -259,7 +259,7 @@
     {{ t .CurrentLocale "connect_with_terminal" "" }}
     </li>
 
-    <a href="/report_an_app_issue" class="list-group-item account-li" id="report-lost-item">
+    <a href="/report_an_app_issue" class="list-group-item account-li" id="report-app-issue">
         <table class="list-item-table">
             <tr>
                 <td class="icon-font">
