telephone for jurisidiction

--- a/views/AppController/account.html
+++ b/views/AppController/account.html
@@ -239,7 +239,7 @@
                         <i style="color:#555;" class="ss ss-call"></i>
                     </td>
                     <td>
-                        <a href='{{ .Phone }}'>{{ .Phone }}</a>
+                        <a href='tel://{{ .Phone }}'>{{ .Phone }}</a>
                     </td>
                 </tr>
             </table>
