--- a/views/AppController/account.html
+++ b/views/AppController/account.html
@@ -284,6 +284,13 @@
             </table>
         </a>
     {{ end }}
+    <table class="list-item-table">
+        <tr>
+            <td class="text" style="padding-bottom: 50px;">
+
+            </td>
+        </tr>
+    </table>
 
 {{end}}
 
