adding padding to show push notification check box

--- a/views/AlertsController/create_alert.html
+++ b/views/AlertsController/create_alert.html
@@ -124,7 +124,7 @@
                     <textarea style="height:200px;" class="form-control" id="text" name="text"></textarea>
                 </div>
 
-                <div class="form-group">
+                <div class="form-group" style="padding-bottom: 50px;">
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" name="push_notification"> Push Notification
