front end complete - mailer and form working

--- a/views/AppController/account.html
+++ b/views/AppController/account.html
@@ -271,6 +271,18 @@
         </table>
     </a>
 
+    <a href="/report_a_service_issue" class="list-group-item account-li" id="report-lost-item">
+        <table class="list-item-table">
+            <tr>
+                <td class="icon-font">
+                    <i style="color:#555;" class="ss ss-lost-item"></i>
+                <td class="text">
+                    REPORT A SERVICE ISSUE
+                </td>
+            </tr>
+        </table>
+    </a>
+
     {{ if eq .ViewData.ViewReportLostItem true }}
         <a href="/lost_item_report" class="list-group-item account-li" id="report-lost-item">
             <table class="list-item-table">
@@ -284,6 +296,7 @@
             </table>
         </a>
     {{ end }}
+
     <table class="list-item-table">
         <tr>
             <td class="text" style="padding-bottom: 50px;">
