--- a/views/AppController/account.html
+++ b/views/AppController/account.html
@@ -277,7 +277,7 @@
                 <td class="icon-font">
                     <i style="color:#555;" class="ss ss-lost-item"></i>
                 <td class="text">
-                    REPORT A SERVICE ISSUE
+                    {{ t .CurrentLocale "report_a_service_issue" "" }}
                 </td>
             </tr>
         </table>
