--- a/views/mail/service_issue.html
+++ b/views/mail/service_issue.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h3>We have received an service issue report.</h3>
+<h3>We have received a service issue report.</h3>
 <table>
     <tr>
         <td>Reported By:</td>
